--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,7 +2,7 @@ user  www www;
 
 worker_processes 1;
 
-error_log  /web/logs/nginx_error.log  crit;
+error_log  /home/wwwroot/logs/nginx_error.log  crit;
 
 pid        /usr/local/nginx/logs/nginx.pid;
 
@@ -40,7 +40,7 @@ http
 		fastcgi_buffer_size 64k;
 		fastcgi_buffers 4 64k;
 		fastcgi_busy_buffers_size 128k;
-		fastcgi_temp_file_write_size 128k;
+		fastcgi_temp_file_write_size 256k;
 
 		gzip on;
 		gzip_min_length  1k;
@@ -57,14 +57,8 @@ server
 		listen       80;
 		server_name www.lnmp.org;
 		index index.html index.htm index.php;
-		root  /web/www;
+		root  /home/wwwroot;
 
-		#limit_conn   crawler  20;
-
-		#location /status {
-		#stub_status	on;
-		#access_log	off;
-		#}
 
 		location ~ .*\.(php|php5)?$
 			{
@@ -87,15 +81,14 @@ server
 		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
              '$status $body_bytes_sent "$http_referer" '
              '"$http_user_agent" $http_x_forwarded_for';
-		access_log  /web/logs/access.log  access;
+		access_log  /home/wwwroot/logs/access.log  access;
 	}
 
 server
 	{
 		listen  80;
-		server_name  status.lnmp.org;
 
-		location / {
+		location /status {
 			stub_status on;
 			access_log   off;
 		}
