--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -59,7 +59,6 @@ server
 		index index.html index.htm index.php;
 		root  /home/wwwroot;
 
-
 		location ~ .*\.(php|php5)?$
 			{
 				fastcgi_pass  unix:/tmp/php-cgi.sock;
@@ -67,6 +66,11 @@ server
 				fastcgi_index index.php;
 				include fcgi.conf;
 			}
+
+		location /status {
+			stub_status on;
+			access_log   off;
+		}
 
 		location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
 			{
@@ -83,15 +87,6 @@ server
              '"$http_user_agent" $http_x_forwarded_for';
 		access_log  /home/wwwroot/logs/access.log  access;
 	}
-
-server
-	{
-		listen  80;
-
-		location /status {
-			stub_status on;
-			access_log   off;
-		}
-	}
+include vhost/*.conf;
 }
 
