--- a/conf/pureftpd-mysql.conf
+++ b/conf/pureftpd-mysql.conf
@@ -1,8 +1,9 @@
 # If you want to use the Socket connect methode comment out the
 # Lines with MMYSQLServer and MYSQLPort.
 # If you want to use the Port methode comment out the MYSQLSocket line
-MYSQLSocket     /var/run/mysqld/mysqld.sock
-MYSQLServer     localhost
+#//IMPORTENT!!!If display 530 error,please check the following MYSQL parameter!!
+MYSQLSocket     /tmp/mysql.sock
+MYSQLServer     127.0.0.1
 MYSQLPort       3306
 MYSQLUser       ftp
 MYSQLPassword   tmppasswd
