--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,7 +2,7 @@ user  www www;
 
 worker_processes 1;
 
-error_log  /home/wwwroot/logs/nginx_error.log  crit;
+error_log  /home/wwwlogs/nginx_error.log  crit;
 
 pid        /usr/local/nginx/logs/nginx.pid;
 
@@ -23,7 +23,7 @@ http
 		server_names_hash_bucket_size 128;
 		client_header_buffer_size 32k;
 		large_client_header_buffers 4 32k;
-		client_max_body_size 8m;
+		client_max_body_size 50m;
 
 		sendfile on;
 		tcp_nopush     on;
@@ -82,7 +82,7 @@ server
 		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
              '$status $body_bytes_sent "$http_referer" '
              '"$http_user_agent" $http_x_forwarded_for';
-		access_log  /home/wwwroot/logs/access.log  access;
+		access_log  /home/wwwlogs/access.log  access;
 	}
 include vhost/*.conf;
 }
