--- a/conf/httpd-vhosts.conf
+++ b/conf/httpd-vhosts.conf
@@ -26,7 +26,7 @@ NameVirtualHost *:88
 #
 <VirtualHost *:88>
 ServerAdmin webmaster@example.com
-php_admin_value open_basedir "/home/wwwroot:/tmp/:/var/tmp/:/proc/"
+#php_admin_value open_basedir "/home/wwwroot:/tmp/:/var/tmp/:/proc/"
 DocumentRoot "/home/wwwroot"
 ServerName www.lnmp.org
 ErrorLog "logs/IP-error_log"
