--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -50,6 +50,11 @@ http
 
 		#limit_zone  crawler  $binary_remote_addr  10m;
 
+		#log format
+		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
+             '$status $body_bytes_sent "$http_referer" '
+             '"$http_user_agent" $http_x_forwarded_for';
+
 server
 	{
 		listen       80;
@@ -59,6 +64,7 @@ server
 
 		location ~ .*\.(php|php5)?$
 			{
+				try_files $uri =404;
 				fastcgi_pass  unix:/tmp/php-cgi.sock;
 				fastcgi_index index.php;
 				include fcgi.conf;
@@ -79,9 +85,6 @@ server
 				expires      12h;
 			}
 
-		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
-             '$status $body_bytes_sent "$http_referer" '
-             '"$http_user_agent" $http_x_forwarded_for';
 		access_log  /home/wwwlogs/access.log  access;
 	}
 include vhost/*.conf;
