--- a/conf/httpd-vhosts.conf
+++ b/conf/httpd-vhosts.conf
@@ -26,8 +26,8 @@ NameVirtualHost *:88
 #
 <VirtualHost *:88>
 ServerAdmin webmaster@example.com
-#php_admin_value open_basedir "/home/wwwroot:/tmp/:/var/tmp/:/proc/"
-DocumentRoot "/home/wwwroot"
+#php_admin_value open_basedir "/home/wwwroot/default:/tmp/:/var/tmp/:/proc/"
+DocumentRoot "/home/wwwroot/default"
 ServerName www.lnmp.org
 ErrorLog "logs/IP-error_log"
 CustomLog "logs/IP-access_log" common
