--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -91,7 +91,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/home/wwwroot"
+DocumentRoot "/home/wwwroot/default"
 #
 # Each directory to which Apache has access can be configured with respect
 # to which services and features are allowed and/or disabled in that
@@ -115,7 +115,7 @@ DocumentRoot "/home/wwwroot"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/home/wwwroot">
+<Directory "/home/wwwroot/default">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
