--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -47,9 +47,12 @@ http
 		gzip_comp_level 2;
 		gzip_types       text/plain application/x-javascript text/css application/xml;
 		gzip_vary on;
+		gzip_proxied        expired no-cache no-store private auth;
+		gzip_disable        "MSIE [1-6]\.";
 
 		#limit_zone  crawler  $binary_remote_addr  10m;
 
+		server_tokens off;
 		#log format
 		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
              '$status $body_bytes_sent "$http_referer" '
@@ -60,7 +63,7 @@ server
 		listen       80;
 		server_name www.lnmp.org;
 		index index.html index.htm index.php;
-		root  /home/wwwroot;
+		root  /home/wwwroot/default;
 
 		location ~ .*\.(php|php5)?$
 			{
