--- a/conf/nginx_a.conf
+++ b/conf/nginx_a.conf
@@ -47,6 +47,8 @@ http
 		gzip_comp_level 2;
 		gzip_types       text/plain application/x-javascript text/css application/xml;
 		gzip_vary on;
+		gzip_proxied        expired no-cache no-store private auth;
+		gzip_disable        "MSIE [1-6]\.";
 
 		#limit_zone  crawler  $binary_remote_addr  10m;
 
@@ -60,7 +62,7 @@ server
 		listen       80;
 		server_name www.lnmp.org;
 		index index.html index.htm index.php;
-		root  /home/wwwroot;
+		root  /home/wwwroot/default;
 
 		location / {
 			try_files $uri @apache;
