--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,6 @@
 user  www www;
 
-worker_processes 1;
+worker_processes auto;
 
 error_log  /home/wwwlogs/nginx_error.log  crit;
 
@@ -13,6 +13,7 @@ events
 	{
 		use epoll;
 		worker_connections 51200;
+		multi_accept on;
 	}
 
 http
@@ -50,7 +51,8 @@ http
 		gzip_proxied        expired no-cache no-store private auth;
 		gzip_disable        "MSIE [1-6]\.";
 
-		#limit_zone  crawler  $binary_remote_addr  10m;
+		#limit_conn_zone $binary_remote_addr zone=perip:10m;
+		##If enable limit_conn_zone,add "limit_conn perip 10;" to server section.
 
 		server_tokens off;
 		#log format
@@ -60,20 +62,24 @@ http
 
 server
 	{
-		listen       80;
+		listen 80 default;
+		#listen [::]:80 default ipv6only=on;
 		server_name www.lnmp.org;
 		index index.html index.htm index.php;
 		root  /home/wwwroot/default;
 
-		location ~ .*\.(php|php5)?$
+		#error_page   404   /404.html;
+		location ~ [^/]\.php(/|$)
 			{
+				# comment try_files $uri =404; to enable pathinfo
 				try_files $uri =404;
 				fastcgi_pass  unix:/tmp/php-cgi.sock;
 				fastcgi_index index.php;
-				include fcgi.conf;
+				include fastcgi.conf;
+				#include pathinfo.conf;
 			}
 
-		location /status {
+		location /nginx_status {
 			stub_status on;
 			access_log   off;
 		}
