--- a/conf/wp2.conf
+++ b/conf/wp2.conf
@@ -1,8 +1,6 @@
-location /wp { 
-if (-f $request_filename/index.php) { 
-rewrite (.*) $1/index.php; 
-} 
-if (!-f $request_filename){ 
-rewrite ^/wp/(.*)$ /wp/index.php; 
-} 
+location /wp/ {
+	try_files $uri $uri/ /wp/index.php?$args;
 }
+
+# Add trailing slash to */wp-admin requests.
+rewrite /wp-admin$ $scheme://$host$uri/ permanent;
