--- a/conf/nginx_a.conf
+++ b/conf/nginx_a.conf
@@ -1,6 +1,6 @@
 user  www www;
 
-worker_processes 1;
+worker_processes auto;
 
 error_log  /home/wwwlogs/nginx_error.log  crit;
 
@@ -13,6 +13,7 @@ events
 	{
 		use epoll;
 		worker_connections 51200;
+		multi_accept on;
 	}
 
 http
@@ -50,7 +51,8 @@ http
 		gzip_proxied        expired no-cache no-store private auth;
 		gzip_disable        "MSIE [1-6]\.";
 
-		#limit_zone  crawler  $binary_remote_addr  10m;
+		#limit_conn_zone $binary_remote_addr zone=perip:10m;
+		##If enable limit_conn_zone,add "limit_conn perip 10;" to server section.
 
 		#log format
 		log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -59,7 +61,8 @@ http
 
 server
 	{
-		listen       80;
+		listen 80 default;
+		#listen [::]:80 default ipv6only=on;
 		server_name www.lnmp.org;
 		index index.html index.htm index.php;
 		root  /home/wwwroot/default;
@@ -74,13 +77,13 @@ server
 			include proxy.conf;
 			}
 
-		location ~ .*\.(php|php5)?$
+		location ~ [^/]\.php(/|$)
 			{
 				proxy_pass http://127.0.0.1:88;
 				include proxy.conf;
 			}
 
-		location /status {
+		location /nginx_status {
 			stub_status on;
 			access_log   off;
 		}
