--- a/conf/wordpress.conf
+++ b/conf/wordpress.conf
@@ -1,11 +1,6 @@
 location / {
-if (-f $request_filename/index.html){
-                rewrite (.*) $1/index.html break;
-        }
-if (-f $request_filename/index.php){
-                rewrite (.*) $1/index.php;
-        }
-if (!-f $request_filename){
-                rewrite (.*) /index.php;
-        }
+	try_files $uri $uri/ /index.php?$args;
 }
+
+# Add trailing slash to */wp-admin requests.
+rewrite /wp-admin$ $scheme://$host$uri/ permanent;
