--- a/conf/httpd-vhosts-lamp.conf
+++ b/conf/httpd-vhosts-lamp.conf
@@ -26,7 +26,7 @@ ServerAdmin webmaster@example.com
 DocumentRoot "/home/wwwroot/default"
 ServerName www.lnmp.org
 ErrorLog "/home/wwwlogs/IP-error_log"
-CustomLog "/home/wwwlogs/IP-access_log" common
+CustomLog "/home/wwwlogs/IP-access_log" combined
 <Directory "/home/wwwroot/default">
     SetOutputFilter DEFLATE
     Options FollowSymLinks
