--- a/conf/pure-ftpd.conf
+++ b/conf/pure-ftpd.conf
@@ -49,7 +49,7 @@ Daemonize                   yes
 
 # Maximum number of sim clients with the same IP address
 
-MaxClientsPerIP             5
+MaxClientsPerIP             10
 
 
 
@@ -113,7 +113,7 @@ MaxIdleTime                 15
 
 # MySQL configuration file (see README.MySQL)
 
-MySQLConfigFile               /usr/local/pureftpd/pureftpd-mysql.conf
+#MySQLConfigFile               /usr/local/pureftpd/etc/pureftpd-mysql.conf
 
 
 # Postgres configuration file (see README.PGSQL)
@@ -123,7 +123,7 @@ MySQLConfigFile               /usr/local/pureftpd/pureftpd-mysql.conf
 
 # PureDB user database (see README.Virtual-Users)
 
-# PureDB                        /etc/pureftpd.pdb
+PureDB                        /usr/local/pureftpd/etc/pureftpd.pdb
 
 
 # Path to pure-authd socket (see README.Authentication-Modules)
@@ -348,7 +348,7 @@ CreateHomeDir               no
 # If your pure-ftpd has been compiled with standalone support, you can change
 # the location of the pid file. The default is /var/run/pure-ftpd.pid
 
-#PIDFile                     /var/run/pure-ftpd.pid
+PIDFile                     /var/run/pure-ftpd.pid
 
 
 
