--- a/conf/nginx_a.conf
+++ b/conf/nginx_a.conf
@@ -55,11 +55,7 @@ http
         ##If enable limit_conn_zone,add "limit_conn perip 10;" to server section.
 
         server_tokens off;
-        #log format
-        log_format  access  '$remote_addr - $remote_user [$time_local] "$request" '
-             '$status $body_bytes_sent "$http_referer" '
-             '"$http_user_agent" $http_x_forwarded_for';
-		access_log off;
+        access_log off;
 
 server
     {
@@ -69,6 +65,7 @@ server
         index index.html index.htm index.php;
         root  /home/wwwroot/default;
 
+        #error_page   404   /404.html;
         include proxy-pass-php.conf;
 
         location /nginx_status
@@ -92,7 +89,7 @@ server
             deny all;
         }
         
-        access_log  /home/wwwlogs/access.log  access;
+        access_log  /home/wwwlogs/access.log;
     }
 include vhost/*.conf;
 }
