--- a/conf/rewrite/typecho.conf
+++ b/conf/rewrite/typecho.conf
@@ -1,12 +1,3 @@
-location / {
-        index index.html index.php;
-        if (-f $request_filename/index.html){
-            rewrite (.*) $1/index.html break;
-        }
-        if (-f $request_filename/index.php){
-            rewrite (.*) $1/index.php;
-        }
-        if (!-f $request_filename){
-            rewrite (.*) /index.php;
-        }
+    if (!-e $request_filename) {
+        rewrite ^(.*)$ /index.php$1 last;
     }
