--- a/conf/rewrite/typecho2.conf
+++ b/conf/rewrite/typecho2.conf
@@ -1,12 +1,5 @@
 location /typecho/ {
-        index index.html index.php;
-        if (-f $request_filename/index.html){
-            rewrite (.*) $1/typecho/index.html break;
-        }
-        if (-f $request_filename/index.php){
-            rewrite (.*) $1/typecho/index.php;
-        }
-        if (!-f $request_filename){
-            rewrite (.*) /typecho/index.php;
-        }
+    if (!-e $request_filename) {
+        rewrite ^(.*)$ /typecho/index.php$1 last;
     }
+}
