--- a/conf/httpd-vhosts-lamp.conf
+++ b/conf/httpd-vhosts-lamp.conf
@@ -24,7 +24,7 @@ NameVirtualHost *:80
 ServerAdmin webmaster@example.com
 #php_admin_value open_basedir "/home/wwwroot/default:/tmp/:/var/tmp/:/proc/"
 DocumentRoot "/home/wwwroot/default"
-ServerName www.lnmp.org
+ServerName _
 ErrorLog "/home/wwwlogs/IP-error_log"
 CustomLog "/home/wwwlogs/IP-access_log" combined
 <Directory "/home/wwwroot/default">
