--- a/conf/httpd22-lamp.conf
+++ b/conf/httpd22-lamp.conf
@@ -247,7 +247,7 @@ ErrorLog "/home/wwwlogs/error_log"
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel crit
 
 <IfModule log_config_module>
     #
