--- a/conf/httpd22-lnmpa.conf
+++ b/conf/httpd22-lnmpa.conf
@@ -247,7 +247,7 @@ ErrorLog "/home/wwwlogs/error_log"
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel crit
 
 <IfModule log_config_module>
     #
@@ -475,5 +475,6 @@ Include conf/extra/httpd-default.conf
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
+SetEnvIf X-Forwarded-Proto https HTTPS=on
 
 Include conf/vhost/*.conf
