--- a/lnmp.conf
+++ b/lnmp.conf
@@ -1,5 +1,5 @@
 
-Download_Mirror='http://soft.vpser.net'
+Download_Mirror='https://soft.vpser.net'
 
 Nginx_Modules_Options=''
 PHP_Modules_Options=''
@@ -9,3 +9,5 @@ MySQL_Data_Dir='/usr/local/mysql/var'
 MariaDB_Data_Dir='/usr/local/mariadb/var'
 ##Default website home directory##
 Default_Website_Dir='/home/wwwroot/default'
+
+Enable_Nginx_Openssl='y'
