--- a/conf/enable-ssl-example.conf
+++ b/conf/enable-ssl-example.conf
@@ -1,27 +1,27 @@
 server
         {
-        listen 443 ssl spdy;
-		#listen [::]:443 ssl spdy;
+        listen 443 ssl http2;
+        #listen [::]:443 ssl http2;
         server_name     lnmp.org www.lnmp.org;
         index index.html index.htm index.php default.html default.htm default.php;
         root  /home/wwwroot/lnmp.org;
         ssl on;
-        ssl_certificate /home/ssl/lnmp.org/ssl.crt;
-        ssl_certificate_key /home/ssl/lnmp.org/ssl.key;
+        ssl_certificate /usr/local/nginx/ssl/lnmp.org.crt;
+        ssl_certificate_key /usr/local/nginx/ssl/lnmp.org.key;
         ssl_session_timeout 5m;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-RC4-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:RC4-SHA:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!DSS:!PKS;
+        ssl_ciphers "EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5";
         ssl_session_cache builtin:1000 shared:SSL:10m;
+        # openssl dhparam -out /usr/local/nginx/ssl/dhparam.pem 2048
+        ssl_dhparam /usr/local/nginx/ssl/dhparam.pem;
         
-		#error_page   404   /404.html;
-        include enable-php.conf;
+        #error_page   404   /404.html;
 
-        location /nginx_status
-        {
-            stub_status on;
-            access_log   off;
-        }
+        # Deny access to PHP files in specific directory
+        #location ~ /(wp-content|uploads|wp-includes|images)/.*\.php$ { deny all; }
+
+        include enable-php.conf;
 
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$
         {
@@ -33,7 +33,16 @@ server
             expires      12h;
         }
 
-        access_log  /home/wwwlogs/lnmp.log  access;
+        location ~ /.well-known {
+            allow all;
+        }
+
+        location ~ /\.
+        {
+            deny all;
+        }
+
+        access_log  /home/wwwlogs/lnmp.log;
 }
 
 server
