--- a/conf/nginx_a.conf
+++ b/conf/nginx_a.conf
@@ -61,11 +61,15 @@ server
     {
         listen 80 default_server;
         #listen [::]:80 default_server ipv6only=on;
-        server_name www.lnmp.org;
+        server_name _;
         index index.html index.htm index.php;
         root  /home/wwwroot/default;
 
         #error_page   404   /404.html;
+
+        # Deny access to PHP files in specific directory
+        #location ~ /(wp-content|uploads|wp-includes|images)/.*\.php$ { deny all; }
+
         include proxy-pass-php.conf;
 
         location /nginx_status
@@ -82,6 +86,10 @@ server
         location ~ .*\.(js|css)?$
         {
             expires      12h;
+        }
+
+        location ~ /.well-known {
+            allow all;
         }
             
         location ~ /\.
